<resources>
    <string name="app_name">Braços Dados</string>


    <string name="bdg_menu_main">Início</string>
    <string name="bdg_menu_network">Minha Rede</string>
    <string name="bdg_menu_sos">SOS</string>
    <string name="bdg_menu_configuration">Configurações</string>
    <string name="bdg_menu_about">Sobre o app </string>
    <string name="bdg_menu_gn">Gênero e Número </string>

    <string name="bdg_menu_firstopen_dialog_title">Atenção</string>
    <string name="bdg_menu_firstopen_dialog_text">
        Para usar o aplicativo, é necessário escolher de três a cinco pessoas de sua rede de confiança e preencher seus números de telefone.
        \n\n
        Deseja cadastrar sua rede agora?
    </string>
    <string name="bdg_menu_firstopen_dialog_positive">Cadastrar contatos</string>
    <string name="bdg_menu_firstopen_dialog_negative">Agora não</string>


    <!--network-->
    <string name="bdg_network_header">Os contatos cadastrados recebem um SMS caso você ative o modo de segurança.
        <br /> Verifique se os números estão corretos e se eles podem receber mensagens de texto.
    </string>
    <string name="bdg_network_save">Salvar contatos</string>
    <string name="bdg_network_firstopen_dialog_text">
        É muito importante escolher pessoas em quem você confia e com quem você possa contar.
        \n\nAlém disso, é importante se certificar de que eles estão de acordo em serem acionados.
        \nPor isso enviaremos um sms para avisá-los de seu cadastro.
    </string>
    <string name="bdg_network_firstopen_dialog_positive">Entendi</string>
    <string name="bdg_network_contact_name">Nome</string>
    <string name="bdg_network_contact_phone">Telefone</string>
    <string name="bdg_network_contact_label">Contato</string>


    <!--login email-->
    <string name="bdg_loginemail_explanation_login">Por favor, preencha os dados abaixo para nos ajudar a conhecer melhor os usuários do aplicativo.</string>
    <string name="bdg_loginemail_name">Nome</string>
    <string name="bdg_loginemail_email">E-mail</string>
    <string name="bdg_loginemail_city">Cidade</string>
    <string name="bdg_loginemail_neighborhood">Bairro</string>
    <string name="bdg_loginemail_gender">Sexo</string>
    <string name="bdg_loginemail_gender_male">Masculino</string>
    <string name="bdg_loginemail_gender_female">Feminino</string>
    <string name="bdg_loginemail_gender_send">Enviar cadastro</string>


    <string name="bdg_login_explanation_login">Para utilizar o Braços Dados, complete o seu cadastro com o Facebook ou e-mail.</string>
    <string name="bdg_login_warning">Não se preocupe, seus dados são \ntotalmente sigilosos.</string>
    <string name="bdg_login_no_face">Conectar com Facebook</string>
    <string name="bdg_login_no_email">Conectar com e-mail</string>
    <string name="bdg_login_top">Em situações de risco, Braços Dados permite que você envie alertas de socorro para contatos \ncadastrados que receberão sua localização e uma mensagem pedindo ajuda.</string>


    <!--alert-->
    <string name="bdg_alert_create_network_msg">Você ainda não cadastrou sua rede de confiança!</string>
    <string name="bdg_alert_network_dialog_title">Atenção</string>
    <string name="bdg_alert_network_dialog_message">Para ativar o modo de segurança, você precisa cadastrar contatos de confiança que receberão um SMS com a sua localização caso você esteja em perigo. \nDeseja cadastrar agora?</string>
    <string name="bdg_alert_network_dialog_positive_button">Sim</string>
    <string name="bdg_alert_network_dialog_negative_button">Agora não</string>
    <string name="bdg_alert_network_sms_message" formatted="false">%1$s, você foi cadastrado na rede de segurança %3$s %2$s pelo aplicativo Braços Dados.
        Essa rede serve como apoio em situações que em que ela se sentir em risco.
        Quando a rede for acionada, você receberá uma mensagem com a localização %3$s %2$s.
    </string>

    <string name="bdg_alert_help_dialog_title">Se você acionou o botão por engano, clique no botão abaixo e cancele o envio do SMS</string>
    <string name="bdg_alert_help_dialog_time">Sua rede de confiança será ativada em %ss.</string>
    <string name="bdg_alert_help_dialog_button">Desativar</string>

    <string name="bdg_alert_smssender_dialog_title">Atenção</string>
    <string name="bdg_alert_smssender_dialog_text">Todos os seus contatos receberam
    sua mensagem de alerta e já estão com a sua geolocalização. Eles vão tentar se comunicar com você, fique atento(a). Se puder, responda.</string>


    <string name="open">open</string>
    <string name="close">close</string>


    <!--bracos dados about-->
    <string name="bdg_bd_about">
        O Braços Dados é um aplicativo que busca mapear as situações em que as mulheres se sentem em risco em espaços públicos.
        \nOferece um serviço de contato imadiato com uma rede previamente cadastrada, que recebe um SMS com a geolocalização da usuária.
    </string>

     <string name="bdg_bd_about_link"><![CDATA[
        <p><u><font color="#6f4982">Leia nossos termos de uso.</font></u></p>
        ]]>
    </string>


    <!--genero e numero-->
    <string name="bdg_about">
        A Gênero e Número é uma iniciativa independente de jornalismo que traz dados para o centro do debate sobre equidade de gênero.
    </string>

     <string name="bdg_about_link">
       <![CDATA[ Para conhecer mais do nosso trabalho, acesse nosso site
       <p><u><font color="#6f4982">www.generonumero.media</font></u></p> ]]>
    </string>

    <string name="bdg_config_time_title">Tempo</string>
    <string name="bdg_config_time_text">Defina o tempo de espera até que o app dispare o SMS para a sua rede de contatos</string>

    <string name="bdg_config_form_title">Formulário sobre o assédio</string>
    <string name="bdg_config_form_text">Defina como prefere receber o formulário de informações após a ativação da rede de contatos.</string>
    <string name="bdg_config_radio_email">Receber via e-mail</string>
    <string name="bdg_config_radio_push">Receber via notificação no celular</string>
    <string name="bdg_alert_msg">Está se sentindo em risco? \n
                                Clique e acione sua rede para pedir ajuda.
    </string>

    <string name="alert_sms_message" formatted="false">%s, estou me sentindo insegur%s neste local: %s . Você me ligaria daqui a pouco?\"</string>

</resources>
