<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bdg_background_login_bottom"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/colorAccent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/bdg_base_spacing_default"
        android:orientation="vertical">


        <TextView
            style="@style/login_bottom_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bdg_loginemail_explanation_login" />


        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/bdg_loginemail_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bdg_loginemail_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/bdg_loginemail_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bdg_loginemail_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/loginemail_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/bdg_loginemail_gender" />


        <RadioGroup
            android:id="@+id/bdg_login_radiogroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/bdg_loginemail_gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/bdg_loginemail_gender_female"
                android:textAppearance="@style/about_text" />

            <RadioButton
                android:id="@+id/bdg_loginemail_gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bdg_loginemail_gender_male"
                android:textAppearance="@style/about_text" />
        </RadioGroup>


        <Button
            android:id="@+id/bdg_email_login_bt"
            style="@style/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bdg_login_email_rounded_button"
            android:text="@string/bdg_loginemail_gender_send" />
    </LinearLayout>
</LinearLayout>
