<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.generonumero.blocodaguarda.login.view.impl.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bdg_login_top" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bdg_background_login"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bdg_login_explanation_login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bdg_login_warning" />

        <Button
            android:id="@+id/bdg_facebook_login_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/com_facebook_button_background_color"
            android:text="@string/com_facebook_loginview_log_in_button" />

        <TextView
            android:id="@+id/bdg_not_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bdg_login_no_face" />
    </LinearLayout>

</LinearLayout>
