<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="@dimen/bdg_base_spacing_default"
    android:paddingLeft="@dimen/bdg_base_spacing_default"
    android:paddingRight="@dimen/bdg_base_spacing_default"
    android:paddingStart="@dimen/bdg_base_spacing_default"
    android:paddingTop="@dimen/bdg_base_spacing_default">

    <TextView
        android:id="@+id/bdg_network_contact_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bdg_base_spacing_default"
        android:text="@string/bdg_network_contact_label"
        android:textColor="@color/bdg_black"
        android:textSize="@dimen/bdg_textSize_medium"
        android:textStyle="bold" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bdg_network_phone_external"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/bdg_network_contact_name"
                style="@style/config_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/bdg_network_contact_name" />

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/bdg_network_contact_address_book"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ico_caderno" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/bdg_network_phone_external"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/bdg_network_contact_address_book">
            <EditText
                android:id="@+id/bdg_network_phone"
                style="@style/config_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/bdg_network_contact_phone"
                android:inputType="phone"
                android:maxLength="15" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

</LinearLayout>